out/production/TpCompilador/com/compilador/analizadorSintactico/y.output
   0  $accept : programa $end

   1  programa : ID bloqueDeclarativo bloqueEjecutable

   2  bloqueDeclarativo : bloqueDeclarativo sentenciasDeclarativas
   3                    | sentenciasDeclarativas

   4  bloqueEjecutable : bloqueTRYCATCH
   5                   | bloqueEjecutableNormal

   6  bloqueTRYCATCH : TRY sentEjecutables CATCH BEGIN sentSoloEjecutables END
   7                 | sentEjecutables CATCH BEGIN sentSoloEjecutables END
   8                 | TRY CATCH BEGIN sentSoloEjecutables END
   9                 | TRY sentEjecutables BEGIN sentSoloEjecutables END
  10                 | TRY sentEjecutables CATCH sentSoloEjecutables END
  11                 | TRY sentEjecutables CATCH BEGIN sentSoloEjecutables error

  12  TRYCATCHFunc : BEGIN bloqueTRYCATCH RETURN '(' retorno ')' ';' END
  13               | BEGIN sentEjecutableFunc bloqueTRYCATCH RETURN '(' retorno ')' ';' END
  14               | BEGIN sentEjecutableFunc bloqueTRYCATCH sentEjecutableFunc RETURN '(' retorno ')' ';' END
  15               | BEGIN bloqueTRYCATCH sentEjecutableFunc RETURN '(' retorno ')' ';' END

  16  bloqueEjecutableNormal : BEGIN sentSoloEjecutables END
  17                         | sentSoloEjecutables END
  18                         | BEGIN sentSoloEjecutables error

  19  bloqueEjecutableFunc : BEGIN sentEjecutableFunc RETURN '(' retorno ')' ';' END
  20                       | BEGIN RETURN '(' retorno ')' ';' END
  21                       | TRYCATCHFunc
  22                       | sentEjecutableFunc RETURN '(' retorno ')' END
  23                       | BEGIN sentEjecutableFunc '(' retorno ')' END
  24                       | BEGIN sentEjecutableFunc RETURN retorno ')' END
  25                       | BEGIN sentEjecutableFunc RETURN '(' ')' END
  26                       | BEGIN sentEjecutableFunc RETURN '(' retorno END

  27  sentEjecutableFunc : sentEjecutableFunc sentEjecutablesFunc
  28                     | sentEjecutablesFunc

  29  sentEjecutablesFunc : sentEjecutables
  30                      | sentenciaCONTRACT

  31  sentenciaCONTRACT : CONTRACT ':' condicion ';'
  32                    | CONTRACT '(' condicion ')' ';'
  33                    | CONTRACT ':' condicion ')' ';'
  34                    | CONTRACT ':' '(' ')' ';'
  35                    | CONTRACT ':' '(' condicion ';'
  36                    | CONTRACT ':' '(' condicion ')' error

  37  sentSoloEjecutables : sentEjecutables sentSoloEjecutables
  38                      | sentEjecutables

  39  sentenciasDeclarativas : declaraVariable
  40                         | declaraFunc
  41                         | declaraVarFunc

  42  declaraVariable : tipo listaVariables ';'
  43                  | listaVariables ';'
  44                  | tipo listaVariables error
  45                  | ID error
  46                  | tipo error

  47  listaVariables : listaVariables ',' ID
  48                 | ID
  49                 | listaVariables ','

  50  declaraFunc : declaracionFunc bloqueDeclarativo bloqueEjecutableFunc
  51              | declaracionFunc bloqueEjecutableFunc

  52  declaraVarFunc : encabezadoFunc listaVariables ';'
  53                 | encabezadoFunc ';'
  54                 | encabezadoFunc listaVariables error

  55  encabezadoFunc : tipo FUNC '(' tipo ')'
  56                 | FUNC '(' tipo ')'
  57                 | tipo FUNC tipo ')'
  58                 | tipo FUNC '(' ')'
  59                 | tipo FUNC '(' tipo error

  60  retorno : expAritmetica
  61          | tipo '(' expAritmetica ')'

  62  expAritmetica : expAritmetica '+' termino
  63                | expAritmetica '-' termino
  64                | termino

  65  termino : termino '*' factor
  66          | termino '/' factor
  67          | factor

  68  factor : ID
  69         | CTE
  70         | '-' CTE
  71         | llamadoFunc

  72  llamadoFunc : ID '(' ID ')'
  73              | ID '(' ')'

  74  declaracionFunc : tipo FUNC ID '(' parametro ')'
  75                  | tipo FUNC ID '(' ')'
  76                  | FUNC ID '(' parametro ')'
  77                  | tipo ID '(' parametro ')'
  78                  | tipo FUNC ID parametro ')'
  79                  | tipo FUNC ID '(' parametro error

  80  parametro : tipo ID
  81            | ID

  82  sentEjecutables : asignacion
  83                  | sentenciaIF
  84                  | sentenciaPRINT
  85                  | sentenciaWHILE

  86  asignacion : ID ASIGN expAritmetica ';'
  87             | ID '=' expAritmetica ';'
  88             | ID ASIGN tipo '(' expAritmetica ')' ';'
  89             | ASIGN expAritmetica ';'
  90             | ID expAritmetica ';'
  91             | ID ASIGN expAritmetica error
  92             | ID ASIGN error
  93             | ID '=' expAritmetica error
  94             | ID '=' error
  95             | ID ASIGN comparacion ';'

  96  sentenciaIF : IF condicion THEN bloqueEjecutable ELSE bloqueEjecutable ENDIF ';'
  97              | IF condicion THEN bloqueEjecutable ENDIF ';'
  98              | condicion THEN bloqueEjecutable ELSE bloqueEjecutable ENDIF ';'
  99              | IF THEN bloqueEjecutable ELSE bloqueEjecutable ENDIF ';'
 100              | IF condicion bloqueEjecutable ELSE bloqueEjecutable ENDIF ';'
 101              | IF condicion THEN ELSE bloqueEjecutable ENDIF ';'
 102              | IF condicion THEN bloqueEjecutable ELSE ENDIF ';'
 103              | IF condicion THEN bloqueEjecutable ELSE bloqueEjecutable ';'
 104              | IF condicion THEN bloqueEjecutable ELSE bloqueEjecutable ENDIF error
 105              | IF THEN bloqueEjecutable ENDIF ';'
 106              | IF condicion bloqueEjecutable ENDIF ';'
 107              | IF condicion THEN ENDIF ';'
 108              | IF condicion THEN bloqueEjecutable ';'
 109              | IF condicion THEN bloqueEjecutable ENDIF error

 110  sentenciaPRINT : PRINT '(' CADENA ')' ';'
 111                 | '(' CADENA ')' ';'
 112                 | PRINT CADENA ')' ';'
 113                 | PRINT '(' ')' ';'
 114                 | PRINT '(' CADENA ';'
 115                 | PRINT '(' CADENA ')' error
 116                 | PRINT '(' ID ')' ';'
 117                 | PRINT '(' CTE ')' ';'

 118  sentenciaWHILE : WHILE condicion DO bloqueEjecutable
 119                 | condicion DO bloqueEjecutable
 120                 | WHILE DO bloqueEjecutable
 121                 | WHILE condicion bloqueEjecutable
 122                 | WHILE condicion DO error

 123  condicion : '(' comparaciones ')'

 124  comparaciones : comparaciones opLogico comparacion
 125                | comparacion
 126                | comparaciones opLogico error

 127  comparacion : expAritmetica comparador expAritmetica
 128              | tipo '(' expAritmetica ')' comparador expAritmetica
 129              | expAritmetica comparador tipo '(' expAritmetica ')'
 130              | tipo '(' expAritmetica ')' comparador tipo '(' expAritmetica ')'
 131              | expAritmetica comparador error
 132              | comparador expAritmetica

 133  comparador : '>'
 134             | '<'
 135             | IGUAL
 136             | DISTINTO
 137             | MAYORIG
 138             | MENORIG
 139             | '='

 140  opLogico : AND
 141           | OR

 142  tipo : LONG
 143       | SINGLE

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	.  error

	programa  goto 2


state 1
	programa : ID . bloqueDeclarativo bloqueEjecutable  (1)

	FUNC  shift 3
	LONG  shift 4
	SINGLE  shift 5
	ID  shift 6
	.  error

	bloqueDeclarativo  goto 7
	sentenciasDeclarativas  goto 8
	declaraVariable  goto 9
	declaraFunc  goto 10
	declaraVarFunc  goto 11
	tipo  goto 12
	listaVariables  goto 13
	declaracionFunc  goto 14
	encabezadoFunc  goto 15


state 2
	$accept : programa . $end  (0)

	$end  accept


state 3
	encabezadoFunc : FUNC . '(' tipo ')'  (56)
	declaracionFunc : FUNC . ID '(' parametro ')'  (76)

	ID  shift 16
	'('  shift 17
	.  error


state 4
	tipo : LONG .  (142)

	.  reduce 142


state 5
	tipo : SINGLE .  (143)

	.  reduce 143


state 6
	declaraVariable : ID . error  (45)
	listaVariables : ID .  (48)

	error  shift 18
	';'  reduce 48
	','  reduce 48


state 7
	programa : ID bloqueDeclarativo . bloqueEjecutable  (1)
	bloqueDeclarativo : bloqueDeclarativo . sentenciasDeclarativas  (2)

	PRINT  shift 19
	FUNC  shift 3
	WHILE  shift 20
	LONG  shift 4
	BEGIN  shift 21
	SINGLE  shift 5
	ID  shift 22
	TRY  shift 23
	IF  shift 24
	ASIGN  shift 25
	'('  shift 26
	.  error

	bloqueEjecutable  goto 27
	sentenciasDeclarativas  goto 28
	bloqueTRYCATCH  goto 29
	bloqueEjecutableNormal  goto 30
	sentEjecutables  goto 31
	sentSoloEjecutables  goto 32
	condicion  goto 33
	declaraVariable  goto 9
	declaraFunc  goto 10
	declaraVarFunc  goto 11
	tipo  goto 12
	listaVariables  goto 13
	declaracionFunc  goto 14
	encabezadoFunc  goto 15
	asignacion  goto 34
	sentenciaIF  goto 35
	sentenciaPRINT  goto 36
	sentenciaWHILE  goto 37


state 8
	bloqueDeclarativo : sentenciasDeclarativas .  (3)

	.  reduce 3


state 9
	sentenciasDeclarativas : declaraVariable .  (39)

	.  reduce 39


state 10
	sentenciasDeclarativas : declaraFunc .  (40)

	.  reduce 40


state 11
	sentenciasDeclarativas : declaraVarFunc .  (41)

	.  reduce 41


state 12
	declaraVariable : tipo . listaVariables ';'  (42)
	declaraVariable : tipo . listaVariables error  (44)
	declaraVariable : tipo . error  (46)
	encabezadoFunc : tipo . FUNC '(' tipo ')'  (55)
	encabezadoFunc : tipo . FUNC tipo ')'  (57)
	encabezadoFunc : tipo . FUNC '(' ')'  (58)
	encabezadoFunc : tipo . FUNC '(' tipo error  (59)
	declaracionFunc : tipo . FUNC ID '(' parametro ')'  (74)
	declaracionFunc : tipo . FUNC ID '(' ')'  (75)
	declaracionFunc : tipo . ID '(' parametro ')'  (77)
	declaracionFunc : tipo . FUNC ID parametro ')'  (78)
	declaracionFunc : tipo . FUNC ID '(' parametro error  (79)

	error  shift 38
	FUNC  shift 39
	ID  shift 40
	.  error

	listaVariables  goto 41


state 13
	declaraVariable : listaVariables . ';'  (43)
	listaVariables : listaVariables . ',' ID  (47)
	listaVariables : listaVariables . ','  (49)

	';'  shift 42
	','  shift 43
	.  error


state 14
	declaraFunc : declaracionFunc . bloqueDeclarativo bloqueEjecutableFunc  (50)
	declaraFunc : declaracionFunc . bloqueEjecutableFunc  (51)

	PRINT  shift 19
	FUNC  shift 3
	WHILE  shift 20
	LONG  shift 4
	BEGIN  shift 44
	SINGLE  shift 5
	ID  shift 22
	CONTRACT  shift 45
	IF  shift 24
	ASIGN  shift 25
	'('  shift 26
	.  error

	bloqueDeclarativo  goto 46
	sentenciasDeclarativas  goto 8
	sentEjecutables  goto 47
	TRYCATCHFunc  goto 48
	sentEjecutableFunc  goto 49
	bloqueEjecutableFunc  goto 50
	sentEjecutablesFunc  goto 51
	sentenciaCONTRACT  goto 52
	condicion  goto 33
	declaraVariable  goto 9
	declaraFunc  goto 10
	declaraVarFunc  goto 11
	tipo  goto 12
	listaVariables  goto 13
	declaracionFunc  goto 14
	encabezadoFunc  goto 15
	asignacion  goto 34
	sentenciaIF  goto 35
	sentenciaPRINT  goto 36
	sentenciaWHILE  goto 37


state 15
	declaraVarFunc : encabezadoFunc . listaVariables ';'  (52)
	declaraVarFunc : encabezadoFunc . ';'  (53)
	declaraVarFunc : encabezadoFunc . listaVariables error  (54)

	ID  shift 53
	';'  shift 54
	.  error

	listaVariables  goto 55


state 16
	declaracionFunc : FUNC ID . '(' parametro ')'  (76)

	'('  shift 56
	.  error


state 17
	encabezadoFunc : FUNC '(' . tipo ')'  (56)

	LONG  shift 4
	SINGLE  shift 5
	.  error

	tipo  goto 57


state 18
	declaraVariable : ID error .  (45)

	.  reduce 45


state 19
	sentenciaPRINT : PRINT . '(' CADENA ')' ';'  (110)
	sentenciaPRINT : PRINT . CADENA ')' ';'  (112)
	sentenciaPRINT : PRINT . '(' ')' ';'  (113)
	sentenciaPRINT : PRINT . '(' CADENA ';'  (114)
	sentenciaPRINT : PRINT . '(' CADENA ')' error  (115)
	sentenciaPRINT : PRINT . '(' ID ')' ';'  (116)
	sentenciaPRINT : PRINT . '(' CTE ')' ';'  (117)

	CADENA  shift 58
	'('  shift 59
	.  error


state 20
	sentenciaWHILE : WHILE . condicion DO bloqueEjecutable  (118)
	sentenciaWHILE : WHILE . DO bloqueEjecutable  (120)
	sentenciaWHILE : WHILE . condicion bloqueEjecutable  (121)
	sentenciaWHILE : WHILE . condicion DO error  (122)

	DO  shift 60
	'('  shift 61
	.  error

	condicion  goto 62


state 21
	bloqueEjecutableNormal : BEGIN . sentSoloEjecutables END  (16)
	bloqueEjecutableNormal : BEGIN . sentSoloEjecutables error  (18)

	PRINT  shift 19
	WHILE  shift 20
	ID  shift 63
	IF  shift 24
	ASIGN  shift 25
	'('  shift 26
	.  error

	sentEjecutables  goto 64
	sentSoloEjecutables  goto 65
	condicion  goto 33
	asignacion  goto 34
	sentenciaIF  goto 35
	sentenciaPRINT  goto 36
	sentenciaWHILE  goto 37


state 22
	declaraVariable : ID . error  (45)
	listaVariables : ID .  (48)
	asignacion : ID . ASIGN expAritmetica ';'  (86)
	asignacion : ID . '=' expAritmetica ';'  (87)
	asignacion : ID . ASIGN tipo '(' expAritmetica ')' ';'  (88)
	asignacion : ID . expAritmetica ';'  (90)
	asignacion : ID . ASIGN expAritmetica error  (91)
	asignacion : ID . ASIGN error  (92)
	asignacion : ID . '=' expAritmetica error  (93)
	asignacion : ID . '=' error  (94)
	asignacion : ID . ASIGN comparacion ';'  (95)

	error  shift 18
	ID  shift 66
	CTE  shift 67
	ASIGN  shift 68
	'-'  shift 69
	'='  shift 70
	';'  reduce 48
	','  reduce 48

	expAritmetica  goto 71
	termino  goto 72
	factor  goto 73
	llamadoFunc  goto 74


state 23
	bloqueTRYCATCH : TRY . sentEjecutables CATCH BEGIN sentSoloEjecutables END  (6)
	bloqueTRYCATCH : TRY . CATCH BEGIN sentSoloEjecutables END  (8)
	bloqueTRYCATCH : TRY . sentEjecutables BEGIN sentSoloEjecutables END  (9)
	bloqueTRYCATCH : TRY . sentEjecutables CATCH sentSoloEjecutables END  (10)
	bloqueTRYCATCH : TRY . sentEjecutables CATCH BEGIN sentSoloEjecutables error  (11)

	PRINT  shift 19
	WHILE  shift 20
	ID  shift 63
	CATCH  shift 75
	IF  shift 24
	ASIGN  shift 25
	'('  shift 26
	.  error

	sentEjecutables  goto 76
	condicion  goto 33
	asignacion  goto 34
	sentenciaIF  goto 35
	sentenciaPRINT  goto 36
	sentenciaWHILE  goto 37


state 24
	sentenciaIF : IF . condicion THEN bloqueEjecutable ELSE bloqueEjecutable ENDIF ';'  (96)
	sentenciaIF : IF . condicion THEN bloqueEjecutable ENDIF ';'  (97)
	sentenciaIF : IF . THEN bloqueEjecutable ELSE bloqueEjecutable ENDIF ';'  (99)
	sentenciaIF : IF . condicion bloqueEjecutable ELSE bloqueEjecutable ENDIF ';'  (100)
	sentenciaIF : IF . condicion THEN ELSE bloqueEjecutable ENDIF ';'  (101)
	sentenciaIF : IF . condicion THEN bloqueEjecutable ELSE ENDIF ';'  (102)
	sentenciaIF : IF . condicion THEN bloqueEjecutable ELSE bloqueEjecutable ';'  (103)
	sentenciaIF : IF . condicion THEN bloqueEjecutable ELSE bloqueEjecutable ENDIF error  (104)
	sentenciaIF : IF . THEN bloqueEjecutable ENDIF ';'  (105)
	sentenciaIF : IF . condicion bloqueEjecutable ENDIF ';'  (106)
	sentenciaIF : IF . condicion THEN ENDIF ';'  (107)
	sentenciaIF : IF . condicion THEN bloqueEjecutable ';'  (108)
	sentenciaIF : IF . condicion THEN bloqueEjecutable ENDIF error  (109)

	THEN  shift 77
	'('  shift 61
	.  error

	condicion  goto 78


state 25
	asignacion : ASIGN . expAritmetica ';'  (89)

	ID  shift 66
	CTE  shift 67
	'-'  shift 69
	.  error

	expAritmetica  goto 79
	termino  goto 72
	factor  goto 73
	llamadoFunc  goto 74


state 26
	sentenciaPRINT : '(' . CADENA ')' ';'  (111)
	condicion : '(' . comparaciones ')'  (123)

	LONG  shift 4
	SINGLE  shift 5
	CADENA  shift 80
	ID  shift 66
	CTE  shift 67
	IGUAL  shift 81
	DISTINTO  shift 82
	MAYORIG  shift 83
	MENORIG  shift 84
	'-'  shift 69
	'='  shift 85
	'>'  shift 86
	'<'  shift 87
	.  error

	tipo  goto 88
	expAritmetica  goto 89
	termino  goto 72
	factor  goto 73
	llamadoFunc  goto 74
	comparacion  goto 90
	comparaciones  goto 91
	comparador  goto 92


state 27
	programa : ID bloqueDeclarativo bloqueEjecutable .  (1)

	.  reduce 1


state 28
	bloqueDeclarativo : bloqueDeclarativo sentenciasDeclarativas .  (2)

	.  reduce 2


state 29
	bloqueEjecutable : bloqueTRYCATCH .  (4)

	.  reduce 4


state 30
	bloqueEjecutable : bloqueEjecutableNormal .  (5)

	.  reduce 5


state 31
	bloqueTRYCATCH : sentEjecutables . CATCH BEGIN sentSoloEjecutables END  (7)
	sentSoloEjecutables : sentEjecutables . sentSoloEjecutables  (37)
	sentSoloEjecutables : sentEjecutables .  (38)

	PRINT  shift 19
	WHILE  shift 20
	ID  shift 63
	CATCH  shift 93
	IF  shift 24
	ASIGN  shift 25
	'('  shift 26
	END  reduce 38

	sentEjecutables  goto 64
	sentSoloEjecutables  goto 94
	condicion  goto 33
	asignacion  goto 34
	sentenciaIF  goto 35
	sentenciaPRINT  goto 36
	sentenciaWHILE  goto 37


state 32
	bloqueEjecutableNormal : sentSoloEjecutables . END  (17)

	END  shift 95
	.  error


state 33
	sentenciaIF : condicion . THEN bloqueEjecutable ELSE bloqueEjecutable ENDIF ';'  (98)
	sentenciaWHILE : condicion . DO bloqueEjecutable  (119)

	THEN  shift 96
	DO  shift 97
	.  error


state 34
	sentEjecutables : asignacion .  (82)

	.  reduce 82


state 35
	sentEjecutables : sentenciaIF .  (83)

	.  reduce 83


state 36
	sentEjecutables : sentenciaPRINT .  (84)

	.  reduce 84


state 37
	sentEjecutables : sentenciaWHILE .  (85)

	.  reduce 85


state 38
	declaraVariable : tipo error .  (46)

	.  reduce 46


state 39
	encabezadoFunc : tipo FUNC . '(' tipo ')'  (55)
	encabezadoFunc : tipo FUNC . tipo ')'  (57)
	encabezadoFunc : tipo FUNC . '(' ')'  (58)
	encabezadoFunc : tipo FUNC . '(' tipo error  (59)
	declaracionFunc : tipo FUNC . ID '(' parametro ')'  (74)
	declaracionFunc : tipo FUNC . ID '(' ')'  (75)
	declaracionFunc : tipo FUNC . ID parametro ')'  (78)
	declaracionFunc : tipo FUNC . ID '(' parametro error  (79)

	LONG  shift 4
	SINGLE  shift 5
	ID  shift 98
	'('  shift 99
	.  error

	tipo  goto 100


state 40
	listaVariables : ID .  (48)
	declaracionFunc : tipo ID . '(' parametro ')'  (77)

	'('  shift 101
	error  reduce 48
	';'  reduce 48
	','  reduce 48


state 41
	declaraVariable : tipo listaVariables . ';'  (42)
	declaraVariable : tipo listaVariables . error  (44)
	listaVariables : listaVariables . ',' ID  (47)
	listaVariables : listaVariables . ','  (49)

	error  shift 102
	';'  shift 103
	','  shift 43
	.  error


state 42
	declaraVariable : listaVariables ';' .  (43)

	.  reduce 43


state 43
	listaVariables : listaVariables ',' . ID  (47)
	listaVariables : listaVariables ',' .  (49)

	ID  shift 104
	error  reduce 49
	';'  reduce 49
	','  reduce 49


state 44
	TRYCATCHFunc : BEGIN . bloqueTRYCATCH RETURN '(' retorno ')' ';' END  (12)
	TRYCATCHFunc : BEGIN . sentEjecutableFunc bloqueTRYCATCH RETURN '(' retorno ')' ';' END  (13)
	TRYCATCHFunc : BEGIN . sentEjecutableFunc bloqueTRYCATCH sentEjecutableFunc RETURN '(' retorno ')' ';' END  (14)
	TRYCATCHFunc : BEGIN . bloqueTRYCATCH sentEjecutableFunc RETURN '(' retorno ')' ';' END  (15)
	bloqueEjecutableFunc : BEGIN . sentEjecutableFunc RETURN '(' retorno ')' ';' END  (19)
	bloqueEjecutableFunc : BEGIN . RETURN '(' retorno ')' ';' END  (20)
	bloqueEjecutableFunc : BEGIN . sentEjecutableFunc '(' retorno ')' END  (23)
	bloqueEjecutableFunc : BEGIN . sentEjecutableFunc RETURN retorno ')' END  (24)
	bloqueEjecutableFunc : BEGIN . sentEjecutableFunc RETURN '(' ')' END  (25)
	bloqueEjecutableFunc : BEGIN . sentEjecutableFunc RETURN '(' retorno END  (26)

	PRINT  shift 19
	RETURN  shift 105
	WHILE  shift 20
	ID  shift 63
	CONTRACT  shift 45
	TRY  shift 23
	IF  shift 24
	ASIGN  shift 25
	'('  shift 26
	.  error

	bloqueTRYCATCH  goto 106
	sentEjecutables  goto 107
	sentEjecutableFunc  goto 108
	sentEjecutablesFunc  goto 51
	sentenciaCONTRACT  goto 52
	condicion  goto 33
	asignacion  goto 34
	sentenciaIF  goto 35
	sentenciaPRINT  goto 36
	sentenciaWHILE  goto 37


state 45
	sentenciaCONTRACT : CONTRACT . ':' condicion ';'  (31)
	sentenciaCONTRACT : CONTRACT . '(' condicion ')' ';'  (32)
	sentenciaCONTRACT : CONTRACT . ':' condicion ')' ';'  (33)
	sentenciaCONTRACT : CONTRACT . ':' '(' ')' ';'  (34)
	sentenciaCONTRACT : CONTRACT . ':' '(' condicion ';'  (35)
	sentenciaCONTRACT : CONTRACT . ':' '(' condicion ')' error  (36)

	'('  shift 109
	':'  shift 110
	.  error


state 46
	bloqueDeclarativo : bloqueDeclarativo . sentenciasDeclarativas  (2)
	declaraFunc : declaracionFunc bloqueDeclarativo . bloqueEjecutableFunc  (50)

	PRINT  shift 19
	FUNC  shift 3
	WHILE  shift 20
	LONG  shift 4
	BEGIN  shift 44
	SINGLE  shift 5
	ID  shift 22
	CONTRACT  shift 45
	IF  shift 24
	ASIGN  shift 25
	'('  shift 26
	.  error

	sentenciasDeclarativas  goto 28
	sentEjecutables  goto 47
	TRYCATCHFunc  goto 48
	sentEjecutableFunc  goto 49
	bloqueEjecutableFunc  goto 111
	sentEjecutablesFunc  goto 51
	sentenciaCONTRACT  goto 52
	condicion  goto 33
	declaraVariable  goto 9
	declaraFunc  goto 10
	declaraVarFunc  goto 11
	tipo  goto 12
	listaVariables  goto 13
	declaracionFunc  goto 14
	encabezadoFunc  goto 15
	asignacion  goto 34
	sentenciaIF  goto 35
	sentenciaPRINT  goto 36
	sentenciaWHILE  goto 37


state 47
	sentEjecutablesFunc : sentEjecutables .  (29)

	.  reduce 29


state 48
	bloqueEjecutableFunc : TRYCATCHFunc .  (21)

	.  reduce 21


state 49
	bloqueEjecutableFunc : sentEjecutableFunc . RETURN '(' retorno ')' END  (22)
	sentEjecutableFunc : sentEjecutableFunc . sentEjecutablesFunc  (27)

	PRINT  shift 19
	RETURN  shift 112
	WHILE  shift 20
	ID  shift 63
	CONTRACT  shift 45
	IF  shift 24
	ASIGN  shift 25
	'('  shift 26
	.  error

	sentEjecutables  goto 47
	sentEjecutablesFunc  goto 113
	sentenciaCONTRACT  goto 52
	condicion  goto 33
	asignacion  goto 34
	sentenciaIF  goto 35
	sentenciaPRINT  goto 36
	sentenciaWHILE  goto 37


state 50
	declaraFunc : declaracionFunc bloqueEjecutableFunc .  (51)

	.  reduce 51


state 51
	sentEjecutableFunc : sentEjecutablesFunc .  (28)

	.  reduce 28


state 52
	sentEjecutablesFunc : sentenciaCONTRACT .  (30)

	.  reduce 30


state 53
	listaVariables : ID .  (48)

	.  reduce 48


state 54
	declaraVarFunc : encabezadoFunc ';' .  (53)

	.  reduce 53


state 55
	listaVariables : listaVariables . ',' ID  (47)
	listaVariables : listaVariables . ','  (49)
	declaraVarFunc : encabezadoFunc listaVariables . ';'  (52)
	declaraVarFunc : encabezadoFunc listaVariables . error  (54)

	error  shift 114
	';'  shift 115
	','  shift 43
	.  error


state 56
	declaracionFunc : FUNC ID '(' . parametro ')'  (76)

	LONG  shift 4
	SINGLE  shift 5
	ID  shift 116
	.  error

	tipo  goto 117
	parametro  goto 118


state 57
	encabezadoFunc : FUNC '(' tipo . ')'  (56)

	')'  shift 119
	.  error


state 58
	sentenciaPRINT : PRINT CADENA . ')' ';'  (112)

	')'  shift 120
	.  error


state 59
	sentenciaPRINT : PRINT '(' . CADENA ')' ';'  (110)
	sentenciaPRINT : PRINT '(' . ')' ';'  (113)
	sentenciaPRINT : PRINT '(' . CADENA ';'  (114)
	sentenciaPRINT : PRINT '(' . CADENA ')' error  (115)
	sentenciaPRINT : PRINT '(' . ID ')' ';'  (116)
	sentenciaPRINT : PRINT '(' . CTE ')' ';'  (117)

	CADENA  shift 121
	ID  shift 122
	CTE  shift 123
	')'  shift 124
	.  error


state 60
	sentenciaWHILE : WHILE DO . bloqueEjecutable  (120)

	PRINT  shift 19
	WHILE  shift 20
	BEGIN  shift 21
	ID  shift 63
	TRY  shift 23
	IF  shift 24
	ASIGN  shift 25
	'('  shift 26
	.  error

	bloqueEjecutable  goto 125
	bloqueTRYCATCH  goto 29
	bloqueEjecutableNormal  goto 30
	sentEjecutables  goto 31
	sentSoloEjecutables  goto 32
	condicion  goto 33
	asignacion  goto 34
	sentenciaIF  goto 35
	sentenciaPRINT  goto 36
	sentenciaWHILE  goto 37


state 61
	condicion : '(' . comparaciones ')'  (123)

	LONG  shift 4
	SINGLE  shift 5
	ID  shift 66
	CTE  shift 67
	IGUAL  shift 81
	DISTINTO  shift 82
	MAYORIG  shift 83
	MENORIG  shift 84
	'-'  shift 69
	'='  shift 85
	'>'  shift 86
	'<'  shift 87
	.  error

	tipo  goto 88
	expAritmetica  goto 89
	termino  goto 72
	factor  goto 73
	llamadoFunc  goto 74
	comparacion  goto 90
	comparaciones  goto 91
	comparador  goto 92


state 62
	sentenciaWHILE : WHILE condicion . DO bloqueEjecutable  (118)
	sentenciaWHILE : WHILE condicion . bloqueEjecutable  (121)
	sentenciaWHILE : WHILE condicion . DO error  (122)

	PRINT  shift 19
	WHILE  shift 20
	BEGIN  shift 21
	DO  shift 126
	ID  shift 63
	TRY  shift 23
	IF  shift 24
	ASIGN  shift 25
	'('  shift 26
	.  error

	bloqueEjecutable  goto 127
	bloqueTRYCATCH  goto 29
	bloqueEjecutableNormal  goto 30
	sentEjecutables  goto 31
	sentSoloEjecutables  goto 32
	condicion  goto 33
	asignacion  goto 34
	sentenciaIF  goto 35
	sentenciaPRINT  goto 36
	sentenciaWHILE  goto 37


state 63
	asignacion : ID . ASIGN expAritmetica ';'  (86)
	asignacion : ID . '=' expAritmetica ';'  (87)
	asignacion : ID . ASIGN tipo '(' expAritmetica ')' ';'  (88)
	asignacion : ID . expAritmetica ';'  (90)
	asignacion : ID . ASIGN expAritmetica error  (91)
	asignacion : ID . ASIGN error  (92)
	asignacion : ID . '=' expAritmetica error  (93)
	asignacion : ID . '=' error  (94)
	asignacion : ID . ASIGN comparacion ';'  (95)

	ID  shift 66
	CTE  shift 67
	ASIGN  shift 68
	'-'  shift 69
	'='  shift 70
	.  error

	expAritmetica  goto 71
	termino  goto 72
	factor  goto 73
	llamadoFunc  goto 74


state 64
	sentSoloEjecutables : sentEjecutables . sentSoloEjecutables  (37)
	sentSoloEjecutables : sentEjecutables .  (38)

	PRINT  shift 19
	WHILE  shift 20
	ID  shift 63
	IF  shift 24
	ASIGN  shift 25
	'('  shift 26
	error  reduce 38
	END  reduce 38

	sentEjecutables  goto 64
	sentSoloEjecutables  goto 94
	condicion  goto 33
	asignacion  goto 34
	sentenciaIF  goto 35
	sentenciaPRINT  goto 36
	sentenciaWHILE  goto 37


state 65
	bloqueEjecutableNormal : BEGIN sentSoloEjecutables . END  (16)
	bloqueEjecutableNormal : BEGIN sentSoloEjecutables . error  (18)

	error  shift 128
	END  shift 129
	.  error


state 66
	factor : ID .  (68)
	llamadoFunc : ID . '(' ID ')'  (72)
	llamadoFunc : ID . '(' ')'  (73)

	'('  shift 130
	error  reduce 68
	END  reduce 68
	IGUAL  reduce 68
	DISTINTO  reduce 68
	MAYORIG  reduce 68
	MENORIG  reduce 68
	AND  reduce 68
	OR  reduce 68
	')'  reduce 68
	';'  reduce 68
	'+'  reduce 68
	'-'  reduce 68
	'*'  reduce 68
	'/'  reduce 68
	'='  reduce 68
	'>'  reduce 68
	'<'  reduce 68


state 67
	factor : CTE .  (69)

	.  reduce 69


state 68
	asignacion : ID ASIGN . expAritmetica ';'  (86)
	asignacion : ID ASIGN . tipo '(' expAritmetica ')' ';'  (88)
	asignacion : ID ASIGN . expAritmetica error  (91)
	asignacion : ID ASIGN . error  (92)
	asignacion : ID ASIGN . comparacion ';'  (95)

	error  shift 131
	LONG  shift 4
	SINGLE  shift 5
	ID  shift 66
	CTE  shift 67
	IGUAL  shift 81
	DISTINTO  shift 82
	MAYORIG  shift 83
	MENORIG  shift 84
	'-'  shift 69
	'='  shift 85
	'>'  shift 86
	'<'  shift 87
	.  error

	tipo  goto 132
	expAritmetica  goto 133
	termino  goto 72
	factor  goto 73
	llamadoFunc  goto 74
	comparacion  goto 134
	comparador  goto 92


state 69
	factor : '-' . CTE  (70)

	CTE  shift 135
	.  error

